@@ -1,3 +1,8 @@
+2018-02-23  Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	PR fortran/84346
+	* gfortran.dg/statement_function_1.f90: Update test.
+
 2018-02-21  Sudakshina Das  <sudi.das@arm.com>
 
 	Backport from trunk
